--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Provi Hackathon</title>
+    <link href="./style.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Busca-Eco</title>
 </head>
-
 <body>
-    <h1>Hello Hacka</h1>
-    <h1>Hello</h1>
+    <header> <!-- ícone de home e botão de cadastro -->   
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Busca-Eco</a></div>
+              <div class="text-right">
+                <button type="button" class="btn btn-success" role="button">Cadastrar produto</button>
+          </div></nav>
+    </header>
+    <!--barra de pesquisa e embaixo divs-cards com exemplos dos produtos -->
+    <div class="input-group mb-4 border rounded-pill p-1">
+        <input type="search" placeholder="Digite a categoria ou produto que procura" aria-describedby="button-addon3" class="form-control bg-none border-0">
+        <div class="input-group-append border-0">
+          <button id="button-addon3" type="button" class="btn btn-link text-success"><i class="fa fa-search"></i></button>
+        </div>
+      </div>
+    <main> <!-- div da imagem e div da explicação "como funciona" --> <br>
+           <!-- div da imagem e div da explicação "quer ser nosso parceiro?"-->
+           <div class="text-center"><button type="button" class="btn btn-success" role="button">Cadastrar produto</button></div> 
+           <br>
+           <br>
+           <br>
+    </main>
+    <footer><!--div do logo da busca-eco --> </footer>
+           <p>@Grupo 54</p>
 </body>
-
 </html>
