--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                 <button type="button" class="btn btn-success" role="button">Cadastrar produto</button>
           </div></nav>
     </header>
+    <!--- div do cupom gratuito -->
+    <div>
+     <!-- <img src=""> ícone antes do h4--><h4>Use o cupom BUSCA-ECO nas suas compras e ganhe 5% de desconto em todos os itens</h4>
+    </div>
     <!--barra de pesquisa e embaixo divs-cards com exemplos dos produtos -->
     <div class="input-group mb-4 border rounded-pill p-1">
         <input type="search" placeholder="Digite a categoria ou produto que procura" aria-describedby="button-addon3" class="form-control bg-none border-0">
