--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           </div></nav>
     </header>
     <!--- div do cupom gratuito -->
-    <div>
+    <div class="text-center">
      <!-- <img src=""> ícone antes do h6--><h6>Use o cupom BUSCA-ECO nas suas compras e ganhe 5% de desconto em todos os itens</h6>
-     
+
     </div>
     <!--barra de pesquisa e embaixo divs-cards com exemplos dos produtos -->
     <div class="input-group mb-4 border rounded-pill p-1">
