--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Busca-Eco</a></div>
-              <div class="text-right">
-                <button type="button" class="btn btn-success" role="button">Cadastrar produto</button>
-          </div></nav>
+             </nav>
     </header>
     <!--- div do cupom gratuito -->
-    <div class="text-center">
+    <div class="text-center" id="divcupom">
      <!-- <img src=""> ícone antes do h6--><h6>Use o cupom BUSCA-ECO nas suas compras e ganhe 5% de desconto em todos os itens</h6>
 
     </div>
