--- a/index.html
+++ b/index.html
@@ -36,7 +36,20 @@
   <!-- <img src=""> ícone antes do h6--><h6>Use o cupom BUSCA-ECO nas suas compras e ganhe 5% de desconto em todos os itens</h6>
 
  </div>
-    <main> <!-- div da imagem e div da explicação "como funciona" --> <br>
+ <br>
+    <main> 
+      <div class="container">
+        <div class="first-box">
+        <img src="./Imagens/Imagem Home.png"></div>
+        <div class="second-box">
+        <h6>Como a Busca-Eco funciona?</h6>
+      <p>a busca eco...</p></div>
+      </div>
+      <!-- div da imagem e div da explicação "como funciona" --> <br><br><br>
+      <br><br><br>
+      <br><br><br>
+      <br><br><br>
+      <br>
            <!-- div da imagem e div da explicação "quer ser nosso parceiro?"-->
            <div class="text-center"><button type="button" class="btn btn-success" role="button">Cadastrar produto</button></div> 
            <br>
