--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
       <br><br><br>
       <br><br><br>
       <br><br><br>
+      <div class="container">
+        <div class="first-box">
+          <h6>Quer ser nosso parceiro?</h6>
+          <p>Faça o cadastro....</p></div>
+        <div class="second-box">
+          <img src="./Imagens/Imagem Home.png"></div>
+      </div>
+      <br><br><br>
+      <br><br><br>
+      <br><br><br>
+      <br><br><br><br>
+      
       <br>
            <!-- div da imagem e div da explicação "quer ser nosso parceiro?"-->
            <div class="text-center"><button type="button" class="btn btn-success" role="button">Cadastrar produto</button></div> 
