--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       <br><br><br>
       <br><br><br>
       <br><br><br><br>
+      <br><br><br><br><br><br>
       
       <br>
            <!-- div da imagem e div da explicação "quer ser nosso parceiro?"-->
@@ -108,7 +109,7 @@
 
    
 
-    <footer style="backgrouncolor: #544441"><!--div do logo da busca-eco --> </footer>
+    <footer style="background-color: #544441"><!--div do logo da busca-eco --> </footer>
            <span>@Equipe 54</span>
            <img src="Imagens/logo-completa.png" alt="Busca-Eco">
 </body>
