alterações home - footer

--- a/index.html
+++ b/index.html
@@ -109,8 +109,10 @@
 
    
 
-    <footer style="background-color: #544441"><!--div do logo da busca-eco --> </footer>
-           <span>@Equipe 54</span>
-           <img src="Imagens/logo-completa.png" alt="Busca-Eco">
+    <footer><!--div do logo da busca-eco --> 
+           <br>
+           <div container="text-center">
+            <img src="./Imagens/logo-completa.png" alt="Busca-Eco" id="imagemfinal"></div><br>
+           <div class="text-center">@Equipe 54</div><br></footer>
 </body>
 </html>
