filtro de busca por produtos

--- a/pesquisa/index.html
+++ b/pesquisa/index.html
@@ -1,44 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="troca.js" defer></script>
+    <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Provi Hackathon</title>
 </head>
 
 <body>
-    <h1>Hello Hacka</h1>
-    <h1>Hello</h1>
-
-<div>
-    <input type="text" id="barra" value="valdery">
-    <button id="pesquisa" onclick="troca()"> pesquisar </button>
-
-</div>
-
-<div id="resultados" style="display: none">
-    <div>
-        <h3>oi</h3> 
+    <label for="busca"></label>
+    <input type="text" name="busca">
+    <button type="button">Procurar</button>
+    <div class="produtos-encontrados">
+        
     </div>
-    <div>
-        <h3>
-            2
+<script src="./js.js"></script>    
 
-        </h3>
-    </div>
-    <div>
-        <h3>3
-
-        </h3>
-    </div>
-
-</div>
 
 <!--JAVASCRIPT-->
+<!-- TENTANDO ADICIONAR O JS SEPARADO 
 <script async>
 
 const btn = document.querySelector("#pesquisa");
@@ -78,7 +61,6 @@ async function main(){
     console.log(filtrado);
 }
 
-//problemas: não espera escrever algo no input para realizar a função; achar o nome dentro do array de arrays
 
 
 main();
@@ -88,7 +70,8 @@ main();
 
 
 
-</script>
+</script> -->
+
 
 </body>
 
