classes para media query - home

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <main> 
       <div class="container">
         <div class="first-box">
-        <img src="./Imagens/Imagem Home.png"></div>
+        <img src="./Imagens/Imagem Home.png" class="figura"></div>
         <div class="second-box">
         <h3>Como a Busca-Eco funciona?</h3>
       <p>
@@ -71,7 +71,7 @@
       
           </p></div>
         <div class="second-box">
-          <img src="./Imagens/Imagem Home.png"></div>
+          <img src="./Imagens/Imagem Home.png" class="figura"></div>
       </div>
       <br><br><br>
       <br><br><br>
