--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       
       <br><br><br><br>
            <!-- div da imagem e div da explicação "quer ser nosso parceiro?"-->
-           <div class="text-center"><button type="button" class="btn btn-success" role="button">Cadastrar produto</button></div> 
+           <div class="text-center"><button type="button" class="btn btn-success" role="button">Entrar em contato</button></div> 
            <br>
            <br>
            <br>
