alteração footer - adição de link na imagem

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <footer><!--div do logo da busca-eco --> 
            <br>
            <div container="text-center">
-            <img src="./Imagens/logo-completa.png" alt="Busca-Eco" id="imagemfinal"></div><br>
+           <a href="#"> <img src="./Imagens/logo-completa.png" alt="Busca-Eco" id="imagemfinal"></a></div><br>
            <div class="text-center">@Equipe 54</div><br></footer>
 </body>
 </html>
