--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <br><br><br>
       <br><br><br>
       <div class="container">
-        <div class="first-box">
+        <div class="first-box" id="first-box-debaixo">
           <h3>Quer ser nosso parceiro?</h3>
           <p>
             <span><img src="Imagens/folha.png" alt=""> Faça o cadastro da sua empresa, em seguida adicione os produtos  e todas as informações que fazem dele sustentável</span> <br>
@@ -71,7 +71,7 @@
       
           </p></div>
         <div class="second-box">
-          <img src="./Imagens/Imagem Home.png" class="figura"></div>
+          <img src="./Imagens/imagem2home.png" class="figura"></div>
       </div>
       <br><br><br>
       <br><br><br>
