--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
@@ -11,7 +11,7 @@
   <link href="./style.css" rel="stylesheet">
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
   <title>Busca-Eco</title>
@@ -102,7 +102,7 @@
 
     <br>
     <!-- div da imagem e div da explicação "quer ser nosso parceiro?"-->
-    <div class="text-center"><button type="button" class="btn btn-success" role="button">Cadastrar produto</button>
+    <div class="text-center"><button type="button" class="btn btn-success" role="button">Entrar em contato</button>
     </div>
     <br>
     <br>
@@ -121,51 +121,53 @@
         <div class="produtos-encontrados">
         </div>
       </div>
-      
+
     </div>
-    
-  </div>
-  
-</main>
+
+    </div>
+
+  </main>
 
 
-<!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
   Launch demo modal
 </button> -->
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3 class="modal-title" id="exampleModalLabel">Modal title</h3>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-cor" data-bs-dismiss="modal">Ir para o site</button>
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3 class="modal-title" id="exampleModalLabel">Modal title</h3>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-cor" data-bs-dismiss="modal">Ir para o site</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
 
 
-<footer>
-  <!--div do logo da busca-eco -->
-  <br>
-  <div container="text-center">
-    <img src="./Imagens/logo-completa.png" alt="Busca-Eco" id="imagemfinal">
-  </div><br>
-  <div class="text-center">@Equipe 54</div><br>
-</footer>
+  <footer>
+    <!--div do logo da busca-eco -->
+    <br>
+    <div container="text-center">
+      <img src="./Imagens/logo-completa.png" alt="Busca-Eco" id="imagemfinal">
+    </div><br>
+    <div class="text-center">@Equipe 54</div><br>
+  </footer>
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script src="./pesquisa/js.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <script src="./pesquisa/js.js"></script>
 </body>
 
 </html>
