--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <br>
     <!-- div da imagem e div da explicação "quer ser nosso parceiro?"-->
-    <div class="text-center"><button type="button" class="btn btn-success" role="button">Entrar em contato</button>
+    <div class="text-center"><button type="button" class="btn btn-success" role="button">Entrar em contat</button>
     </div>
     <br>
     <br>
