--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             d="M848.471 928l-263.059-263.059c-48.941 36.706-110.118 55.059-177.412 55.059-171.294 0-312-140.706-312-312s140.706-312 312-312c171.294 0 312 140.706 312 312 0 67.294-24.471 128.471-55.059 177.412l263.059 263.059-79.529 79.529zM189.623 408.078c0 121.364 97.091 218.455 218.455 218.455s218.455-97.091 218.455-218.455c0-121.364-103.159-218.455-218.455-218.455-121.364 0-218.455 97.091-218.455 218.455z">
           </path>
         </svg></button>
+        
+
+        
     </form>
     <span id="opcoes">
       <a href="" class="opcao" value="escova">Escova</a>
@@ -58,9 +61,8 @@
     <main>
       <div class="container">
         <div class="first-box">
-
-        <img src="./Imagens/Imagem Home.png" class="figura"></div>
-
+          <img src="./Imagens/Imagem Home.png">
+        </div>
         <div class="second-box">
           <h3>Como a Busca-Eco funciona?</h3>
           <p>
@@ -78,7 +80,7 @@
       <br><br><br>
       <br><br><br>
       <div class="container">
-        <div class="first-box" id="first-box-debaixo">
+        <div class="first-box">
           <h3>Quer ser nosso parceiro?</h3>
           <p>
             <span><img src="Imagens/folha.png" alt=""> Faça o cadastro da sua empresa, em seguida adicione os produtos e
@@ -90,15 +92,13 @@
           </p>
         </div>
         <div class="second-box">
-
-          <img src="./Imagens/imagem2home.png" class="figura"></div>
-
+          <img src="./Imagens/Imagem Home.png">
+        </div>
       </div>
       <br><br><br>
       <br><br><br>
       <br><br><br>
       <br><br><br><br>
-
       <br>
       <!-- div da imagem e div da explicação "quer ser nosso parceiro?"-->
       <div class="text-center"><button type="button" class="btn btn-success" role="button">Cadastrar produto</button>
@@ -142,7 +142,6 @@
 
 
   </footer>
-
 </body>
 
 </html>
