--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/cabecalho.css">
     <link rel="stylesheet" href="./assets/css/conteudo-principal.css">
-    <link rel="stylesheet" href="./">
+    <link rel="stylesheet" href="./assets/css/card.css">
     <link rel="stylesheet" href="./assets/css/modal.css">
   
 
@@ -23,163 +23,11 @@
 </head>
 
 <body>
-  <header>
-    <!-- ícone de home e botão de cadastro -->
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="Imagens/logo-completa.png" alt="Busca-Eco" width="200px"></a>
-      </div>
-    </nav>
-  </header>
-  <br><br><br>
-  <!--barra de pesquisa e embaixo divs-cards com exemplos dos produtos -->
-  <!--<h5> Digite o produto que procura</h5>-->
-  <div class="container">
-    <form role="search" id="form">
-      <input type="text" id="query" name="busca" placeholder="Digite o produto que procura"
-        aria-label="Search through site content">
-      <button id="botaobusca" type="button"><svg viewBox="0 0 1024 1024">
-          <path class="path1"
-            d="M848.471 928l-263.059-263.059c-48.941 36.706-110.118 55.059-177.412 55.059-171.294 0-312-140.706-312-312s140.706-312 312-312c171.294 0 312 140.706 312 312 0 67.294-24.471 128.471-55.059 177.412l263.059 263.059-79.529 79.529zM189.623 408.078c0 121.364 97.091 218.455 218.455 218.455s218.455-97.091 218.455-218.455c0-121.364-103.159-218.455-218.455-218.455-121.364 0-218.455 97.091-218.455 218.455z">
-          </path>
-        </svg></button>
-        
-
-        
-    </form>
-    <span id="opcoes">
-      <a href="linkparapaginadeprodutos/esseproduto" class="opcao">Escova</a>
-      <a href="" class="opcao">Sabonete</a>
-      <a href="" class="opcao">Xampu</a>
-      <a href="" class="opcao">Sabão</a>
-    </span>
-  </div>
-  <br>
-
-  <!--- div do cupom gratuito -->
-  <div class="text-center" id="divcupom">
-    <!-- <img src=""> ícone antes do h6-->
-    <h6><img src="Imagens/Vector.png" alt="cupom"> Use o cupom BUSCA-ECO nas suas compras e ganhe 5% de desconto em
-      todos os itens</h6>
-
-  </div>
-  <br>
-  <div id="pagHome">
-    <main>
-      <div class="container">
-        <div class="first-box">
-          <img src="./Imagens/Imagem Home.png">
-        </div>
-        <div class="second-box">
-          <h3>Como a Busca-Eco funciona?</h3>
-          <p>
-            <span><img src="Imagens/folha.png" alt=""> Pesquise por produtos ou categorias de interesse</span> <br>
-            <span><img src="Imagens/folha.png" alt=""> Visualize o perfil detalhado do produto mais indicado e as
-              características principais</span> <br>
-            <span><img src="Imagens/folha.png" alt=""> Agora você tem todas as informações para escolher o melhor produto
-              para você e acesso ao link do site do fornecedor</span> <br>
-            <span><img src="Imagens/folha.png" alt=""> E ainda conta com nosso cupom de desconto </span> <br>
-          </p>
-        </div>
-      </div>
-      <!-- div da imagem e div da explicação "como funciona" --> <br><br><br>
-      <br><br><br>
-      <br><br><br>
-      <br><br><br>
-      <div class="container">
-        <div class="first-box">
-          <h3>Quer ser nosso parceiro?</h3>
-          <p>
-            <span><img src="Imagens/folha.png" alt=""> Faça o cadastro da sua empresa, em seguida adicione os produtos e
-              todas as informações que fazem dele sustentável</span> <br>
-            <span><img src="Imagens/folha.png" alt=""> Pronto, sua vitrine está montada e você poderá atualizar as
-              informações ou adicionar produtos quando desejar</span> <br>
-            <span><img src="Imagens/folha.png" alt=""> Agora é só aguardar, o usuário vai até você pelo link direto do
-              produto</span> <br>
-          </p>
-        </div>
-        <div class="second-box">
-          <img src="./Imagens/Imagem Home.png">
-        </div>
-      </div>
-      <br><br><br>
-      <br><br><br>
-      <br><br><br>
-      <br><br><br><br>
-      <br>
-      <!-- div da imagem e div da explicação "quer ser nosso parceiro?"-->
-      <div class="text-center"><button type="button" class="btn btn-success" role="button">Cadastrar produto</button>
-      </div>
-      <div class="second-box">
-        <img src="./Imagens/Imagem Home.png">
-      </div>
-    </div>
-    <br><br><br>
-    <br><br><br>
-    <br><br><br>
-    <br><br><br><br>
-
-    <br>
-    <!-- div da imagem e div da explicação "quer ser nosso parceiro?"-->
-    <div class="text-center"><button type="button" class="btn btn-success" role="button">Entrar em contat</button>
-    </div>
-    <br>
-    <br>
-    <br>
-
-    <div id="box-resultados">
-
-      <div id="cards">
-
-
-      </div>
-
-
-      <div id="busca">
-        <label for="busca"></label>
-        <div class="produtos-encontrados">
-        </div>
-      </div>
-
-    </div>
-
-    </div>
-
-  </main>
-
-
-  <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button> -->
-
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h3 class="modal-title" id="exampleModalLabel">Modal title</h3>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-cor" data-bs-dismiss="modal">Ir para o site</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
 
   <footer>
-    <!--div do logo da busca-eco -->
-    <br>
-    <div container="text-center">
-      <img src="./Imagens/logo-completa.png" alt="Busca-Eco" id="imagemfinal">
-    </div><br>
-    <div class="text-center">@Equipe 54</div><br>
-  </footer>
+    <img src="./assets/img/logo-completa.png" class="logo--rodape" alt="">
+    <a href="">@Equipe54</a>
+</footer>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
